--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Wacky Burger - Home</title>
         <link rel="stylesheet" type="text/css" href="StyleSheets/style.css">
+        <link rel="shortcut icon" href="images/Wacky_Burger_Character_Logo-transparent.png" type="image/x-icon">
+
     </head>
     <body>
         <header>
 
-            <img src="Wacky.png" alt="Wacky Logo">
+            <img src="images/Wacky_Burger_Character_Logo-transparent.png" alt="Wacky Logo">
 
             <h1>Wacky Burger</h1>
 
