--- a/login.html
+++ b/login.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Wacky Burger - Login</title>
         <link rel="stylesheet" type="text/css" href="StyleSheets/style.css">
+        <link rel="shortcut icon" href="images/Wacky_Burger_Character_Logo-transparent.png" type="image/x-icon">
+
     </head>
     <body>
         <header>
