Added a menu database and adjusted the nav and header styling.
Co-authored-by: stefanescuowen-cmd <stefanescuowen-cmd@users.noreply.github.com>
Co-authored-by: 25centeno <25centeno@users.noreply.github.com>

--- a/Wacky/Home/index.html
+++ b/Wacky/Home/index.html
@@ -41,6 +41,10 @@
 
                     <li><a onclick="SmartHref('Login')">Login</a></li>
 
+                    <li id="ManageLink"><a onclick="SmartHref('Manage')">Manage</a></li>
+
+                    <li id="Profile"><img src="../../images/user-headshot.png" alt="Profile"></li>
+
                 </ul>
 
             </nav>
@@ -55,7 +59,9 @@
 
                 <h1>Welcome to Wacky Burger</h1>
 
-                <p>Food that satisfies your wacky needs.</p>
+                <p><blockquote>Food that satisfies your wacky needs.</blockquote></p>
+
+                <img src="../../images/Wacky_Burger_Character_Logo-transparent.png" width="10%" class="TransformCenter" alt="WackymanBurgerguyTheWackestOfHistoryAndTheWackestOfToday. xXWackyGamerBurgerIsSoSimga67AlphaPackgod21Xx">
 
             </section>
 
