--- a/Wacky/Manage/index.html
+++ b/Wacky/Manage/index.html
@@ -49,9 +49,10 @@
 
         <article>
         
-            <h1>Welcome Manager!</h1>
-            <p></p>
+            <h1>Manager Dashboard</h1>
+            <p>Welcome, Manager! Here you can manage menu items and check orders.</p>
 
+            <button onclick="SmartHref('Home')">Return to Home</button>
         </article>
 
         <footer>
@@ -59,7 +60,9 @@
             <p>This page was last updated on xx/xx/20xx</p>
         </footer>
 
-        <script src="../../JavaScript/javascript.js"></script>
+        <script src="../../JavaScript/manage.js"></script>
+
+        <script src="../../JavaScript/login.js"></script>
 
         <script src="../../JavaScript/SHref.js"></script>
 
