--- a/Wacky/Menu/index.html
+++ b/Wacky/Menu/index.html
@@ -9,9 +9,8 @@
         <link rel="stylesheet" type="text/css" href="../../StyleSheets/animations.css">
         <link rel="stylesheet" type="text/css" href="../../StyleSheets/style.css">
         <link rel="stylesheet" type="text/css" href="../../StyleSheets/menu.css">
-        <link rel="stylesheet" type="text/css" href="../../StyleSheets/menu.css">
 
-        <link rel="shortcut icon" href="images/Wacky_Burger_Character_Logo-transparent.png" type="image/x-icon">
+        <link rel="shortcut icon" href="../../images/Wacky_Burger_Character_Logo-transparent.png" type="image/x-icon">
         <link rel="icon" type="x-icon" href="../../images/Wacky_Burger_Character_Logo-transparent.png">
 
     </head>
@@ -36,6 +35,10 @@
                     <li><a onclick="SmartHref('About')">About</a></li>
 
                     <li><a onclick="SmartHref('Login')">Login</a></li>
+
+                    <li id="ManageLink"><a onclick="SmartHref('Manage')">Manage</a></li>
+
+                    <li id="Profile"></li>
 
                 </ul>
 
@@ -77,5 +80,8 @@
         <script src="../../JavaScript/menuPage.js"></script>
 
         <script src="../../JavaScript/SHref.js"></script>
+
+        <script src="../../JavaScript/isManager.js"></script>
+
     </body>
 </html>
