Pre-break changes. Worked on about page, adjusted menu editing and purchase pages.
Co-authored-by: stefanescuowen-cmd <stefanescuowen-cmd@users.noreply.github.com>

--- a/Wacky/Checkout/User/index.html
+++ b/Wacky/Checkout/User/index.html
@@ -5,14 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Wacky Burger - Menu</title>
 
-        <link rel="stylesheet" type="text/css" href="../../StyleSheets/imports.css">
-        <link rel="stylesheet" type="text/css" href="../../StyleSheets/animations.css">
-        <link rel="stylesheet" type="text/css" href="../../StyleSheets/style.css">
-        <link rel="stylesheet" type="text/css" href="../../StyleSheets/menu.css">
-        <link rel="stylesheet" type="text/css" href="../../StyleSheets/menu.css">
+        <link rel="stylesheet" type="text/css" href="../../../StyleSheets/imports.css">
+        <link rel="stylesheet" type="text/css" href="../../../StyleSheets/animations.css">
+        <link rel="stylesheet" type="text/css" href="../../../StyleSheets/style.css">
+        <link rel="stylesheet" type="text/css" href="../../../StyleSheets/menu.css">
+        <link rel="stylesheet" type="text/css" href="../../../StyleSheets/menu.css">
 
-        <link rel="shortcut icon" href="../../images/Wacky_Burger_Character_Logo-transparent.png" type="image/x-icon">
-        <link rel="icon" type="x-icon" href="../../images/Wacky_Burger_Character_Logo-transparent.png">
+        <link rel="shortcut icon" href="../../../images/Wacky_Burger_Character_Logo-transparent.png" type="image/x-icon">
+        <link rel="icon" type="x-icon" href="../../../images/Wacky_Burger_Character_Logo-transparent.png">
 
     </head>
     <body>
@@ -21,7 +21,7 @@
 
             <div>
 
-                <img src="../../images/Wacky_Burger_Character_Logo-transparent.png" alt="Wacky Logo">
+                <img src="../../../images/Wacky_Burger_Character_Logo-transparent.png" alt="Wacky Logo">
 
             </div>
 
@@ -60,15 +60,15 @@
             <p>This page was last updated on xx/xx/20xx</p>
         </footer>
         
-        <script src="../../JavaScript/javascript.js"></script>
+        <script src="../../../JavaScript/javascript.js"></script>
 
-        <script src="../../JavaScript/menuDatabase.js"></script>
+        <script src="../../../JavaScript/menuDatabase.js"></script>
         
-        <script src="../../JavaScript/menuPage.js"></script>
+        <script src="../../../JavaScript/menuPage.js"></script>
 
-        <script src="../../JavaScript/SHref.js"></script>
+        <script src="../../../JavaScript/SHref.js"></script>
 
-        <script src="../../JavaScript/isManager.js"></script>
+        <script src="../../../JavaScript/isManager.js"></script>
 
     </body>
 </html>
