Added menu editing functionality, started working on purchase page, and created footer and logout.
Co-authored-by: stefanescuowen-cmd <stefanescuowen-cmd@users.noreply.github.com>
Co-authored-by: 25centeno <25centeno@users.noreply.github.com>

--- a/Wacky/SignUp/index.html
+++ b/Wacky/SignUp/index.html
@@ -33,9 +33,9 @@
 
                     <li><a onclick="SmartHref('About')">About</a></li>
 
-                    <li><a onclick="SmartHref('Login')">Login</a></li>
-
                     <li id="ManageLink"><a onclick="SmartHref('Manage')">Manage</a></li>
+
+                    <li><a id="logInOutButton" onclick="LogInOut(); SmartHref('Login')">Login</a></li>
 
                     <li id="Profile"></li>
 
