Added order history and email decryption and order placing.
Co-authored-by: stefanescuowen-cmd <stefanescuowen-cmd@users.noreply.github.com>
Co-authored-by: 25centeno <25centeno@users.noreply.github.com>

--- a/Wacky/Checkout/User/index.html
+++ b/Wacky/Checkout/User/index.html
@@ -50,9 +50,9 @@
         </header>
 
         <article id="main">
-            <div id="receiptContainer"></div>
-            <button id="downloadPDF">Download Receipt (PDF)</button>
-            <button onclick="window.location.SmartHref=''"></button>
+            <h2>Your Cart</h2>
+            <div id="cartSummary"></div>
+            <button id="placeOrder">Place Order</button>
         </article>
         
         <footer>
