--- a/Wacky/Checkout/Guest/index.html
+++ b/Wacky/Checkout/Guest/index.html
@@ -50,7 +50,7 @@
         </header>
 
         <article id="main">
-            <h2>Guest Checkout</h2>
+            <h2>Your Cart</h2>
 
             <div id="cartSummary"></div>
 
@@ -60,8 +60,6 @@
                 <input type="email"  id="email" placeholder="Email" required>
                 <button type="submit">Place Order</button>
             </form>
-
-            <button id="downloadPDF">Download Receipt (PDF)</button>
         </article>
         
         <footer>
