--- a/Wacky/Receipt/index.html
+++ b/Wacky/Receipt/index.html
@@ -3,17 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Wacky Burger - Menu</title>
+        <title>Wacky Burger - Receipt</title>
 
         <link rel="stylesheet" type="text/css" href="../../StyleSheets/imports.css">
         <link rel="stylesheet" type="text/css" href="../../StyleSheets/animations.css">
         <link rel="stylesheet" type="text/css" href="../../StyleSheets/style.css">
-        <link rel="stylesheet" type="text/css" href="../../StyleSheets/menu.css">
 
         <link rel="shortcut icon" href="../../images/Wacky_Burger_Character_Logo-transparent.png" type="image/x-icon">
         <link rel="icon" type="x-icon" href="../../images/Wacky_Burger_Character_Logo-transparent.png">
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
     </head>
     <body>
@@ -87,16 +84,15 @@
             </div>
 
         </footer>
+
+        <script src="../../JavaScript/menuDatabase.js"></script>
         
-        <script src="../JavaScript/javascript.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+        <script src="../../JavaScript/receipt.js"></script>
 
-        <script src="../JavaScript/menuDatabase.js"></script>
-        
-        <script src="../JavaScript/receipt.js"></script>
+        <script src="../../JavaScript/SHref.js"></script>
 
-        <script src="../JavaScript/SHref.js"></script>
-
-        <script src="../JavaScript/isManager.js"></script>
+        <script src="../../JavaScript/isManager.js"></script>
 
     </body>
 </html>
