Added account page and about page
Co-authored-by: stefanescuowen-cmd <stefanescuowen-cmd@users.noreply.github.com>
Co-authored-by: 25centeno <25centeno@users.noreply.github.com>

--- a/Wacky/About/index.html
+++ b/Wacky/About/index.html
@@ -18,6 +18,12 @@
         <link rel="shortcut icon" href="../../images/Wacky_Burger_Character_Logo-transparent.png" type="image/x-icon">
         <link rel="icon" type="x-icon" href="../../images/Wacky_Burger_Character_Logo-transparent.png">
 
+        <style>
+
+            [class*=flex]{outline: 1px solid red; margin-top: 50px;}
+
+        </style>
+
     </head>
 
     <body>
@@ -58,11 +64,86 @@
 
             <section>
 
-                <h1>What is Wacky Burger About?</h1>
+                <div style="display: flex;">
 
-                <p>
-                    Lorum Ipusm Text Here
-                </p>
+                    <div class="flexBoxContainer">
+
+                        <div class="flex1">
+
+                            <h1>What is Wacky Burger About?</h1>
+
+                            <br>
+
+                            <img src="../../images/monster-burger.jpg" width="15%" alt="Wacky Jr"> 
+
+                            <br>
+
+                            <p style="width: 75%; justify-self: center;">
+                                Wacky Burger is mostly about the wackyness that burgers can get.
+                                We can make you a burger with only letuce.
+                                Burgers that have too much tomatos.
+                                Burgers that are giant that no other food place would do.
+                                Wacky Burger is proud for being the way it is today.
+                                Being a simple yet wacky Burger Resturant that you can go out and eat at.
+                                Which you can even surprise your friends with the burger you got!
+                            </p>
+
+                        </div>
+
+                        <div class="flex2">
+
+                            <h1>How It Started</h1>
+
+                            <br>
+
+                            <img src="../../images/Wacky_Burger_Character_Logo-transparent.png" width="30%" alt="Wacky Burger Logo">
+
+                            <br>
+
+                            <p style="width: 75%; justify-self: center;">
+                                Wacky Burger started out in 1984.
+                                Serving up burgers to people that wanted them.
+                                The burgers were grilled and made carefully.
+                                But basically Wacky Burger originated from Texas,
+                                Founded by <strong>John Wacky</strong>.
+                                His first food item he ever made. <em>Wacky Burger Jr.</em>
+                                Was a success. Then he proceeded to make French Fries like no other place could do.
+                                You can say they are Freaking good french fries.
+                                <br>
+                                <br>
+                                Wacky Burger has become a proud Burger Resturant ever sense then.
+                                Suriving all the way till current date.
+                            </p>
+
+                        </div>
+
+                        <div class="flex2">
+
+                            <h1>The Founder Himself</h1>
+
+                            <br>
+
+                            <img src="../../images/manager-headshot.png" width="30%" alt="Founder">
+
+                            <br>
+
+                            <p style="width: 75%; justify-self: center;">
+                                The founder grew up in texas.
+                                Family grilled outside alot,
+                                Making the best burgers he has ever eaten.
+                                <br>
+                                <br>
+                                Eventually he grew older. Dawned a cowboy hat.
+                                And wanted to make the burger he grew up with.
+                                He wanted to share his knowlage, the taste,
+                                and wackyness that a burger can have.
+                            </p>
+
+                        </div>
+
+                    </div>
+
+                </div>
 
             </section>
 
