Updated styling, about page, account page
Co-authored-by: stefanescuowen-cmd <stefanescuowen-cmd@users.noreply.github.com>
Co-authored-by: 25centeno <25centeno@users.noreply.github.com>

--- a/Wacky/About/index.html
+++ b/Wacky/About/index.html
@@ -141,6 +141,68 @@
 
                         </div>
 
+                        <div class="flex1">
+
+                            <h1>What Our Food Is About Too</h1>
+
+                            <div class="flex4">
+
+                                <h2>Freaky French Fries</h2>
+
+                                <img src="../../images/funky-french-fries.jpg" width="75%">
+
+                                <p>
+                                    When he had French Fries back when he was a kid.
+                                    It wasnt to his standards.
+                                    To him it tasted bland, not good, mid.
+                                    So he made french fries of his own with potatos he grown outside.
+                                    Carefully cutting them into the fries shape before popping off with some ideas he had.
+                                    This is what made Freaky Fries the way it is today.
+                                </p>
+
+                            </div>
+
+                            <div class="flex4">
+
+                                <h2>Tomato Hater Burger</h2>
+
+                                <img src="../../images/tomato-burger.jpg" width="75%">
+
+                                <p>
+                                    When he saw people not wanting tomatos on the burger.
+                                    While others really wanted tomatos on their burger.
+                                    So he thought of making something silly. <strong>The Tomato Hater Burger</strong>!
+                                    This burger if for the people who love tomatos!
+                                    And to show people who hate tomatos too!
+                                    Show your friends this burger he thought.
+                                </p>
+
+                            </div>
+
+                            <div class="flex4">
+
+                                <h2></h2>
+
+                                <img src="../../images" width="75%">
+
+                                <p></p>
+
+                            </div>
+
+                            <div class="flex4">
+
+                                <h2></h2>
+
+                                <img src="../../images" width="75%">
+
+                                <p></p>
+
+                            </div>
+
+                        </div>
+
+
+
                     </div>
 
                 </div>
