--- a/Wacky/Account/index.html
+++ b/Wacky/Account/index.html
@@ -33,7 +33,7 @@
 
                 <ul>
 
-                    <li><a class="CurrentlyOn" onclick="SmartHref('Home')">Home</a></li>
+                    <li><a onclick="SmartHref('Home')">Home</a></li>
                     
                     <li><a onclick="SmartHref('Menu')">Menu</a></li>
 
