--- a/Wacky/Checkout/Guest/index.html
+++ b/Wacky/Checkout/Guest/index.html
@@ -53,7 +53,7 @@
 
             <div id="cartSummary"></div>
 
-            <div id="deliveryProgressContainer" style="margin: 10px 0;">
+            <div id="deliveryProgressContainer">
                 <label for="deliveryProgress">Delivery Fee Progress:</label>
                 <progress id="deliveryProgress" value="0" max="5"></progress>
                 <span id="deliveryProgressText">$0 / $5.00</span>
