--- a/Wacky/Checkout/User/index.html
+++ b/Wacky/Checkout/User/index.html
@@ -53,7 +53,7 @@
 
             <div id="cartSummary"></div>
 
-            <div id="deliveryProgressContainer" style="margin: 10px 0;">
+            <div id="deliveryProgressContainer">
                 <label for="deliveryProgress">Delivery Fee Progress:</label>
                 <progress id="deliveryProgress" value="0" max="5"></progress>
                 <span id="deliveryProgressText">$0 / $5.00</span>
@@ -62,7 +62,17 @@
             <select name="pickupDelivery" id="pickupDelivery" required>
                     <option value="pickup">Pickup</option>
                     <option value="delivery">Delivery</option>
-                </select>
+            </select>
+
+            <div id="deliveryAddressContainer" style="display: none; margin-top: 10px;">
+                <input
+                    type="text"
+                    id="deliveryAddress"
+                    placeholder="Enter delivery address"
+                    style="width: 100%;"
+                >
+            </div>
+
             <button id="placeOrder">Place Order</button>
         </article>
         
