Updated checkout and menu and account pages.
Co-authored-by: stefanescuowen-cmd <stefanescuowen-cmd@users.noreply.github.com>
Co-authored-by: 25centeno <25centeno@users.noreply.github.com>

--- a/Wacky/About/index.html
+++ b/Wacky/About/index.html
@@ -164,14 +164,14 @@
 
                             <div class="flex4">
 
-                                <h2>Tomato Hater Burger</h2>
+                                <h2>Tomater Hater Burger</h2>
 
                                 <img src="../../images/tomato-burger.jpg" width="75%">
 
                                 <p>
                                     When he saw people not wanting tomatos on the burger.
                                     While others really wanted tomatos on their burger.
-                                    So he thought of making something silly. <strong>The Tomato Hater Burger</strong>!
+                                    So he thought of making something silly. <strong>The Tomater Hater Burger</strong>!
                                     This burger if for the people who love tomatos!
                                     And to show people who hate tomatos too!
                                     Show your friends this burger he thought.
@@ -181,21 +181,25 @@
 
                             <div class="flex4">
 
-                                <h2></h2>
+                                <h2>Pickley Burger</h2>
 
-                                <img src="../../images" width="75%">
+                                <img src="../../images/pickle-burger.jpg" width="75%">
 
-                                <p></p>
+                                <p>
+                                    
+                                </p>
 
                             </div>
 
                             <div class="flex4">
 
-                                <h2></h2>
+                                <h2>Yummers Lettuce Burger</h2>
 
-                                <img src="../../images" width="75%">
+                                <img src="../../images/lettuce-burger.jpg" width="75%">
 
-                                <p></p>
+                                <p>
+                                    
+                                </p>
 
                             </div>
 
