--- a/Wacky/Receipt/index.html
+++ b/Wacky/Receipt/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" type="text/css" href="../../StyleSheets/imports.css">
         <link rel="stylesheet" type="text/css" href="../../StyleSheets/animations.css">
         <link rel="stylesheet" type="text/css" href="../../StyleSheets/style.css">
+        <link rel="stylesheet" type="text/css" href="../../StyleSheets/receipt.css">
 
         <link rel="shortcut icon" href="../../images/Wacky_Burger_Character_Logo-transparent.png" type="image/x-icon">
         <link rel="icon" type="x-icon" href="../../images/Wacky_Burger_Character_Logo-transparent.png">
@@ -49,8 +50,10 @@
         
         <article id="main">
             <div id="receiptContainer"></div>
-            <button id="downloadPDF">Download Receipt (PDF)</button>
-            <button onclick="SmartHref('Menu')">Return to Menu</button>
+            <div id="buttons">
+                <button id="downloadPDF">Download Receipt (PDF)</button>
+                <button onclick="SmartHref('Menu')">Return to Menu</button>
+            </div>
        </article>
        
        <footer>
