--- a/Wacky/Home/index.html
+++ b/Wacky/Home/index.html
@@ -30,6 +30,8 @@
 
             </div>
 
+            <h1><a class="HH1">W</a><a class="HH2">a</a><a class="HH3">c</a><a class="HH4">k</a><a class="HH5">y</a> <a class="HH6">B</a><a class="HH7">u</a><a class="HH8">r</a><a class="HH9">g</a><a class="HH10">e</a><a class="HH11">r</a></h1>
+
             <nav>
 
                 <ul>
@@ -44,13 +46,50 @@
 
                     <li><a id="logInOutButton" onclick="LogInOut(); SmartHref('Login')">Login</a></li>
 
-                    <li id="Profile"></li>
-
                 </ul>
 
             </nav>
 
-            <h1><a class="HH1">W</a><a class="HH2">a</a><a class="HH3">c</a><a class="HH4">k</a><a class="HH5">y</a> <a class="HH6">B</a><a class="HH7">u</a><a class="HH8">r</a><a class="HH9">g</a><a class="HH10">e</a><a class="HH11">r</a></h1>
+            <div id="Profile"></div>
+
+            <nav id="sidebar-menu">
+
+                <div>
+
+                    <img src="../../images/Wacky_Burger_Character_Logo-transparent.png" alt="Wacky Logo">
+
+                </div>
+
+                <div id="Profile2">
+
+                    <p>My Account</p>
+
+                </div>
+
+                <ul>
+
+                    <li><a class="CurrentlyOn" onclick="SmartHref('Home')">Home</a></li>
+                    
+                    <li><a onclick="SmartHref('Menu')">Menu</a></li>
+
+                    <li><a onclick="SmartHref('About')">About</a></li>
+
+                    <li id="ManageLink2"><a onclick="SmartHref('Manage')">Manage</a></li>
+
+                    <li><a id="logInOutButton2" onclick="LogInOut(); SmartHref('Login')">Login</a></li>
+
+                </ul>
+
+                <button class="close-btn">&times;</button>
+
+            </nav>
+
+
+            <div class="hamburger" id="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
             
         </header>
 
