Added responsive design and added wacky points.
Co-authored-by: stefanescuowen-cmd <stefanescuowen-cmd@users.noreply.github.com>

--- a/Wacky/About/index.html
+++ b/Wacky/About/index.html
@@ -63,11 +63,11 @@
 
             <ul>
 
-                <li><a class="CurrentlyOn" onclick="SmartHref('Home')">Home</a></li>
+                <li><a onclick="SmartHref('Home')">Home</a></li>
                     
                 <li><a onclick="SmartHref('Menu')">Menu</a></li>
 
-                <li><a onclick="SmartHref('About')">About</a></li>
+                <li><a class="CurrentlyOn" onclick="SmartHref('About')">About</a></li>
 
                 <li id="ManageLink2"><a onclick="SmartHref('Manage')">Manage</a></li>
 
@@ -156,7 +156,7 @@
 
                         
 
-                        <div class="flex1">
+                        <div class="aboutRow">
 
                             <h3>What Our Food Is About</h3>
 
