--- a/Wacky/Checkout/index.html
+++ b/Wacky/Checkout/index.html
@@ -122,13 +122,33 @@
                     </div>
                 </div>
                 
-                <div id="usePointsContainer" style="display: none; margin-top:10px;">
+                <div id="usePointsContainer">
                     <label id="useWackyPointsLabel">
                         <input type="checkbox" id="useWackyPoints">
                         Use my Wacky Points balance
                     </label>
                     <p id="extraLoginText">Want to earn extra points on your purchase? <a onclick="SmartHref('Login')">Log In</a> or <a onclick="SmartHref('Signup')">Sign Up</a> today!</p>
 
+                </div>
+
+                <div id="totalSection">
+                    <div>   
+                        <p class="totalText">Subtotal:</p>
+                        <p>$10.99</p>
+                    </div>
+                    <div>   
+                        <p class="totalText">Delivery Fee:</p>
+                        <p>$4.99</p>
+                    </div>
+                    <div>   
+                        <p class="totalText">Wacky Point Discount:</p>
+                        <p>$1.99</p>
+                    </div>
+                    <hr>
+                    <div>   
+                        <p class="totalText">Total:</p>
+                        <p>$16.99</p>
+                    </div>
                 </div>
 
                 <button type="submit">Place Order</button>
