--- a/Wacky/Manage/index.html
+++ b/Wacky/Manage/index.html
@@ -60,13 +60,13 @@
 
             <ul>
 
-                <li><a class="CurrentlyOn" onclick="SmartHref('Home')">Home</a></li>
+                <li><a onclick="SmartHref('Home')">Home</a></li>
                     
                 <li><a onclick="SmartHref('Menu')">Menu</a></li>
 
                 <li><a onclick="SmartHref('About')">About</a></li>
 
-                <li id="ManageLink2"><a onclick="SmartHref('Manage')">Manage</a></li>
+                <li class="CurrentlyOn" id="ManageLink2"><a onclick="SmartHref('Manage')">Manage</a></li>
 
                 <li><a id="logInOutButton2" onclick="LogInOut(); SmartHref('Login')">Login</a></li>
 
