--- a/Wacky/Menu/index.html
+++ b/Wacky/Menu/index.html
@@ -56,9 +56,9 @@
 
             <ul>
 
-                <li><a class="CurrentlyOn" onclick="SmartHref('Home')">Home</a></li>
+                <li><a onclick="SmartHref('Home')">Home</a></li>
                     
-                <li><a onclick="SmartHref('Menu')">Menu</a></li>
+                <li><a class="CurrentlyOn" onclick="SmartHref('Menu')">Menu</a></li>
 
                 <li><a onclick="SmartHref('About')">About</a></li>
 
@@ -83,7 +83,7 @@
             <div id="cartSection">
             </div>
 
-            <p>Total:</p>
+            <p id="menuTextResponsive">Total:</p>
             <p id="cartTotal">$0.00</p>
 
             <div id="checkoutItems">
