--- a/Wacky/SignUp/index.html
+++ b/Wacky/SignUp/index.html
@@ -55,7 +55,7 @@
 
             <ul>
 
-                <li><a class="CurrentlyOn" onclick="SmartHref('Home')">Home</a></li>
+                <li><a onclick="SmartHref('Home')">Home</a></li>
                     
                 <li><a onclick="SmartHref('Menu')">Menu</a></li>
 
